@@ -634,6 +634,7 @@ aliases_canadd0=Based on your limits, $1 additional aliases can be added.
 aliases_canadd1=Based on your reseller's limits, $1 additional aliases can be added.
 aliases_canadd2=Based on your reseller limits, $1 additional aliases can be added.
 aliases_reply=Autoreply with message $1
+aliases_emass=Manually edit aliases.
 
 alias_create=Create Mail Alias
 alias_edit=Edit Mail Alias
@@ -3183,12 +3184,14 @@ amass_err=Failed to create aliases
 amass_doing=Creating aliases from $1 ..
 amass_complete=.. done ($1 created, $2 errors).
 amass_ename=Missing or invalid alias name
+amass_ecatchall=You are not allowed to create catchall aliases
 amass_edests=Alias has no destination addresses
 amass_elocal=Only one local mailbox can be given
 amass_eauto=Only one autoresponder can be given
 amass_ebounce=The bounce destination cannot be combined with any other
 amass_done=Created email alias $1
 amass_eclash=An alias with the same name already exists
+amass_eunknown=Unknown alias destination $1
 
 massu_title=Un-Install Scripts
 massu_err=Failed to un-install scripts
@@ -3465,7 +3468,7 @@ upgrade_ok=Upgrade Now
 upgrade_err=Failed to upgrade to Virtualmin Pro
 upgrade_eserial=Missing or invalid-looking serial number
 upgrade_ekey=Missing or invalid-looking license key
-upgrade_elogin=Your serial number of license key were not recogized by the Virtualmin Pro website
+upgrade_elogin=Your serial number and license key were not recogized by the Virtualmin Pro website
 upgrade_econnect=An error occurred connecting to the Virtualmin Pro server : $1
 upgrade_mods=Downloading and installing modules ..
 upgrade_mod=Installing $1 version $2 ..
@@ -3570,3 +3573,15 @@ massg_enone=None selected
 massg_fromto=Upgrading from $1 to $2
 massg_stay=Staying with $1
 massg_doing=Upgrading $1 to version $2 ..
+
+aedit_title=Manually Edit Aliases
+aedit_header=Create multiple email aliases from batch file
+aedit_help=This page allows you to edit, create and delete multiple aliases at once, by editing each as a line of text. Each line has the following format (read the help for this page for more):
+aedit_missing=$1 aliases were not displayed below, as their destinations are too complex to edit manually.
+aedit_text=Aliases text
+aedit_done=Modified email alias $1
+aedit_deleted=Deleted email alias $1
+aedit_doing=Updating email aliases ..
+aedit_complete=.. done ($1 created, $3 modified, $4 deleted, $2 errors).
+aedit_etwice=An alias with the same name is listed more than once
+aedit_eauto=Automatic replies cannot be setup when manually editing aliases
